--- a/ln_js/task/task_01/style/index.css
+++ b/ln_js/task/task_01/style/index.css
@@ -39,6 +39,8 @@ a:hover { text-decoration:underline; }
 .set .main .blue a:hover { background: blue; color: #fff; border: 1px solid #000;}
 .set .main a:hover { background: #ef9400; color: #000; border: 1px solid #000;}
 
+.bg {  width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); position: fixed; left: 0; top: 0;
+    display: none;  }
 
 
 
